Revision history for Perl extension PGXN::API

0.12.7
      - Fixed a bug where an updated root `index.json` updated on the mirror
        was not likewise getting updated in the API root.

0.12.6  2011-04-27T18:52:18
      - Eliminated "Use of uninitialized variable in soubroutine" warning when
        indexing extensions with no abstract.
      - Allow an optional trailing backslash on search URLs (since the
        template includes one).
      - Add new "special files" to detect: INSTALL, LICENSE, COPYING, and
        AUTHORS.
      - Changed search results content type from `text/json` to
        `application/json`.
      - Enabled JSONP for search requests.
      - Changed tests to use `.zip` ending for downloads instead of `.pgz`.

0.12.5  2011-04-25T18:07:27
      - The directory name in which browsable distribution source files are
        unzipped is now always lowercase.
      - Fixed the primary key in the for distributsions, docs and extension in
        the search index to always be lowercased.
      - Distribution names and versions are now always lowercase in verbose
        outout.

0.12.4  2011-04-25T16:59:36
      - The prefix in zip files is now assumed to be lowercase, as
        PGXN::Manager v0.12.4 enforces.

0.12.3  2011-04-25T16:35:28
      - When searching for "special files", the indexer now looks for files
        ending in ".in" if it doesn't find them without the ".in". Suggested
        by Daniele Varrazzo.
      - Always user lowercase disttribution names, versions, extension names,
        tags, and nicknames in in URI templates. They're still displayed with
        case preserved inside files and the index.

0.12.2  2011-04-22T18:51:42
      - Changed the media type of many more files served from `src` to
        text/plain. This is both for security reasons and so that files that
        are plain text open in the browser rather than prompt to download.

0.12.1  2011-04-20T23:41:26